[package]
name = "udatatable"
version = "0.1.0"
edition = "2021"
authors = ["Michael Kamprath <michael+crates@kamprath.net>"]
description = "A library for creating data tables in an embedded no_std environment without an allocator."
readme = "README.md"
keywords = ["no_std", "embedded", "avr", "arduino", "data", "table", "datatable",]
categories = ["no-std", "embedded", "data"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ufmt = { version = "0.2", git =  "https://github.com/michaelkamprath/ufmt.git", branch = "floating_point", features = ["f32"] }

panic-halt = "0.2.0"

[dev-dependencies]
ufmt-write = { version = "0.1", git =  "https://github.com/michaelkamprath/ufmt.git", branch = "floating_point", features = ["std"]}


[[test]]
name = "doctest"
path = "src/lib.rs"
required-features = ["std"]