[package]
name = "udatatable"
version = "0.1.0"
edition = "2021"
authors = ["Michael Kamprath <michael+crates@kamprath.net>"]
description = "A library for creating data tables in an embedded no_std environment without an allocator."
readme = "README.md"
keywords = ["no_std", "embedded", "avr", "arduino", "data", "table", "datatable",]
categories = ["no-std", "embedded", "data-structures"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/michaelkamprath/udatatable"
repository = "https://github.com/michaelkamprath/udatatable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# "plot" feature - enables plotting of data tables using the `plot` function.
plot = []

[dependencies]
# need to use the git version of ufmt to that there are no link errors when using the `ufmt-write` crate,
# which is not publioshed outside the git repository, in the `doctest` test.
ufmt = { version = "0.2", git = "https://github.com/japaric/ufmt.git" }
panic-halt = "0.2.0"

[dev-dependencies]
ufmt-write = { version = "0.1", git = "https://github.com/japaric/ufmt.git", features = ["std"]}

[[test]]
name = "doctest"
path = "src/lib.rs"
